2004-05-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b139

	* Change:
	  !!  2004-05-23:   adv_search.php has been broken
	  !!  for an unknown amount of time.  Since it has
	  !!  no references from outside files, it will 
	  !!  automatically redirect to albums.php until
	  !!  it can be fixed

2004-05-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b138

	* Change: Items which are children of hidden parents can not be located
	  using search.php.  I extensively debugged and profiled this to ensure that
	  it is being called as few times as possible.  Recursion is only called on 
	  matching objects.

2004-05-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b137

	* Change: Create watermark preview files with an incrementing number.
	  This prevent an issue where the preview doesn't reload after modification
	  due to smart browser caching.

	  This change required addition of a generic glob() function for PHP < 4.3.0
	  so that the old preview files can be removed when creating a new one, or
	  when finalizing the watermark. (PHP >= 4.3 uses the native glob())

2004-05-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b136

	* Change: Watermarking code was missing some quotes around "checked"
	  in several locations

2004-05-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b135

	* Change: A couple "&nbsp" => "&nbsp;" text fixes

	* 957300: Prevent two different-format images from being uploaded
	  with the same basename.  (i.e.  hello.jpg and hello.gif don't both
	  end up being tagged as "hello")

2004-05-21  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b134

	* Change: Revert part of b129. Only Album title is now a link.

	* Fix: Removed warning in view_photo

	* Change: show "no Caption" in view_photo, if photo has no caption

	* Fix: removed default class in function showChoice in view_album, 
	       due to unreadable pulldown menu in some skins.
