@@ -1,3 +1,9 @@
+2004-05-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b140
+
+	* Change: Use makeGalleryHeaderUrl() instead of makeGalleryUrl() in
+	  makeFormIntro due to the fact that we, later in the function, split
+	  parameters based on "&"
+
 2004-05-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b139
 
 	* Change:
